@@ -96,7 +96,6 @@ QHash<QString, spoton_crypt *> spoton_kernel::s_crypts;
 QMultiHash<qint64,
 	   QPointer<spoton_neighbor> > spoton_kernel::s_connectionCounts;
 QList<QList<QByteArray> > spoton_kernel::s_institutionKeys;
-QList<QList<QVariant> > spoton_kernel::s_messagesToProcess;
 QList<QPair<QByteArray, QByteArray> > spoton_kernel::s_adaptiveEchoPairs;
 QPointer<spoton_kernel> spoton_kernel::s_kernel = 0;
 QReadWriteLock spoton_kernel::s_adaptiveEchoPairsMutex;
@@ -105,7 +104,6 @@ QReadWriteLock spoton_kernel::s_emailRequestCacheMutex;
 QReadWriteLock spoton_kernel::s_geminisCacheMutex;
 QReadWriteLock spoton_kernel::s_institutionKeysMutex;
 QReadWriteLock spoton_kernel::s_institutionLastModificationTimeMutex;
-QReadWriteLock spoton_kernel::s_messagesToProcessMutex;
 QReadWriteLock spoton_kernel::s_messagingCacheMutex;
 QReadWriteLock spoton_kernel::s_settingsMutex;
 
@@ -509,10 +507,6 @@ spoton_kernel::spoton_kernel(void):QObject(0)
 	  SIGNAL(timeout(void)),
 	  this,
 	  SLOT(slotPoptasticPost(void)));
-  connect(&m_processReceivedMessagesTimer,
-	  SIGNAL(timeout(void)),
-	  this,
-	  SLOT(slotProcessReceivedMessages(void)));
   connect(&m_publishAllListenersPlaintextTimer,
 	  SIGNAL(timeout(void)),
 	  this,
@@ -541,7 +535,6 @@ spoton_kernel::spoton_kernel(void):QObject(0)
   if(!setting("gui/disableSmtp", false).toBool())
     m_poptasticPostTimer.start(2500);
 
-  m_processReceivedMessagesTimer.start(100);
   m_publishAllListenersPlaintextTimer.setInterval(10 * 60 * 1000);
   m_settingsTimer.setInterval(1500);
   m_scramblerTimer.setSingleShot(true);
@@ -705,26 +698,20 @@ spoton_kernel::~spoton_kernel()
   m_messagingCachePurgeTimer.stop();
   m_poptasticPopTimer.stop();
   m_poptasticPostTimer.stop();
-  m_processReceivedMessagesTimer.stop();
   m_publishAllListenersPlaintextTimer.stop();
   m_scramblerTimer.stop();
   m_settingsTimer.stop();
   m_statusTimer.stop();
 
-  QWriteLocker locker1(&s_messagesToProcessMutex);
-
-  s_messagesToProcess.clear();
-  locker1.unlock();
-
-  QWriteLocker locker2(&s_messagingCacheMutex);
+  QWriteLocker locker1(&s_messagingCacheMutex);
 
   s_messagingCache.clear();
-  locker2.unlock();
+  locker1.unlock();
 
-  QWriteLocker locker3(&m_poptasticCacheMutex);
+  QWriteLocker locker2(&m_poptasticCacheMutex);
 
   m_poptasticCache.clear();
-  locker3.unlock();
+  locker2.unlock();
   m_future.cancel();
   m_poptasticPopFuture.cancel();
   m_poptasticPostFuture.cancel();
@@ -1335,15 +1322,10 @@ void spoton_kernel::prepareNeighbors(void)
 
   if(disconnected == m_neighbors.size() || m_neighbors.isEmpty())
     {
-      QWriteLocker locker1(&s_messagesToProcessMutex);
-
-      s_messagesToProcess.clear();
-      locker1.unlock();
-
-      QWriteLocker locker2(&s_messagingCacheMutex);
+      QWriteLocker locker(&s_messagingCacheMutex);
 
       s_messagingCache.clear();
-      locker2.unlock();
+      locker.unlock();
     }
 }
 
@@ -1939,6 +1921,15 @@ void spoton_kernel::connectSignalsToNeighbor
 	  SLOT(slotReceivedChatMessage(const QByteArray &)),
 	  Qt::UniqueConnection);
   connect(neighbor,
+	  SIGNAL(receivedMessage(const QByteArray &,
+				 const qint64,
+				 const QPairByteArrayByteArray &)),
+	  this,
+	  SIGNAL(write(const QByteArray &,
+		       const qint64,
+		       const QPairByteArrayByteArray &)),
+	  Qt::UniqueConnection);
+  connect(neighbor,
 	  SIGNAL(statusMessageReceived(const QByteArray &,
 				       const QString &)),
 	  m_guiServer,
@@ -2025,6 +2016,13 @@ void spoton_kernel::connectSignalsToNeighbor
 	  SIGNAL(sendStatus(const QByteArrayList &)),
 	  neighbor,
 	  SLOT(slotSendStatus(const QByteArrayList &)),
+	  Qt::UniqueConnection);
+  connect(this,
+	  SIGNAL(write(const QByteArray &, const qint64,
+		       const QPairByteArrayByteArray &)),
+	  neighbor,
+	  SLOT(write(const QByteArray &, const qint64,
+		     const QPairByteArrayByteArray &)),
 	  Qt::UniqueConnection);
 }
 
@@ -4252,16 +4250,6 @@ void spoton_kernel::updateStatistics(const QDateTime &uptime,
 	query.exec();
 	query.prepare("INSERT OR REPLACE INTO kernel_statistics "
 		      "(statistic, value) "
-		      "VALUES ('Neighbors ITC Messages', ?)");
-
-	QReadLocker locker3(&s_messagesToProcessMutex);
-
-	v1 = s_messagesToProcess.size();
-	locker3.unlock();
-	query.bindValue(0, v1);
-	query.exec();
-	query.prepare("INSERT OR REPLACE INTO kernel_statistics "
-		      "(statistic, value) "
 		      "VALUES ('Uptime', ?)");
 	query.bindValue
 	  (0, QString("%1 Minutes").
@@ -4684,50 +4672,6 @@ int spoton_kernel::buzzKeyCount(void)
   QReadLocker locker(&s_buzzKeysMutex);
 
   return s_buzzKeys.size();
-}
-
-void spoton_kernel::slotProcessReceivedMessages(void)
-{
-  while(true)
-    {
-      QList<QVariant> list;
-      QWriteLocker locker(&s_messagesToProcessMutex);
-
-      if(!s_messagesToProcess.isEmpty())
-	list = s_messagesToProcess.takeFirst();
-      else
-	break;
-
-      locker.unlock();
-
-      QHashIterator<qint64, QPointer<spoton_neighbor> > it(m_neighbors);
-
-      while(it.hasNext())
-	{
-	  it.next();
-
-	  if(it.value())
-	    if(it.value()->id() != list.value(1).toLongLong())
-	      it.value()->write
-		(list.value(0).toByteArray(),
-		 list.value(1).toLongLong(),
-		 QPair<QByteArray, QByteArray> (list.value(2).toByteArray(),
-						list.value(3).toByteArray()));
-	}
-    }
-}
-
-void spoton_kernel::receivedMessage
-(const QByteArray &data, const qint64 id,
- const QPair<QByteArray, QByteArray> &adaptiveEchoPair)
-{
-  QList<QVariant> list;
-
-  list << data << id << adaptiveEchoPair.first << adaptiveEchoPair.second;
-
-  QWriteLocker locker(&s_messagesToProcessMutex);
-
-  s_messagesToProcess.append(list);
 }
 
 bool spoton_kernel::duplicateEmailRequests(const QByteArray &data)
